2003-04-24  Martin Blom  <martin@blom.org>

	* filesave.audio: Now endian aware. Avoided varargs in order to
	make it compile for AROS.

	* filesave.audio: Can now be compiled using gcc.

2003-04-23  Martin Blom  <martin@blom.org>

	* Released void.audio 5.3.

	* void.audio: Moved generic code parts to Drivers/Common, which
	can now be used by other drivers too.

2003-04-22  Martin Blom  <martin@blom.org>

	* Released void.audio 5.2.

	* Released AHI-Handler 5.2.

	* Released ahi.device 5.34.

	* Released AddAudioModes 5.4.

	* Released AHI preferences 5.9.

	* The endian update from 2003-04-17 broke all big endian
	targets. Fixed.

	* void.audio: This example driver can now be compiled using gcc
	and builds for all targets (m68k-amigaos, ppc-morphos,
	i?86be-amithlon and i386-aros).

2003-04-18  Martin Blom  <martin@blom.org>

	* AHI: If no mode is available, the "Play a test sound" button is
	disabled.

2003-04-17  Martin Blom  <martin@blom.org>

	* Ported AHI to AROS.

	* The device and preference program are now endian aware when
	reading IFF files.

2003-04-13  Martin Blom  <martin@blom.org>

	* ahi.device: For some weired reason I apparently disabled
	PreTimer()/PostTimer() support (aka the CPU overload protection)
	in version 5.29. Now it's enabled again.

2003-04-12  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.33.

	* ahi.device: The audio mode requester now resizes to its minimum
	width if asked to open a smaller window. Before, it just failed
	to open.

	* ahi.device: The audio mode requester now uses the ASL
	preferences if available (requires asl.library V45 or
	later). [Todd A. Oberly]

	* ahi.device (AudioRequestA): AHIR_PrivateIDCMP is now honored
	even if AHIR_Screen or AHIR_PubScreenName is provided.

	* PlayTest: I finally fixed the bug that could make the example
	call DeleteIORequest() on a pointer obtained from AllocMem().

	* Released ahi.device 5.32.

	* ahi.deivce: io_Actual is now valid even if a CMD_READ or